# Algorithmic_paradigm

./: .gitignore  CMakeLists.txt  ConsoleApplication1.sln  README.md  index.md  main.cpp
Algorithms/: CMakeLists.txt  README.md  algorithms.cpp
Algorithms/DivideAndConquer/: CMakeLists.txt  DivideAndConquer.md  README.md
Algorithms/DivideAndConquer/BinarySearch/: CMakeLists.txt  README.md
Algorithms/DivideAndConquer/BinarySearch/include/: binarySearch.h
Algorithms/DivideAndConquer/BinarySearch/include/BinarySearch/: binarySearch.h
Algorithms/DivideAndConquer/BinarySearch/src/: binarySearch.cpp
Algorithms/GreedyApproach/DijKastra/: README.md
Algorithms/GreedyApproach/DijKastra/include/DijKastra/: dijKastra.h  edge.h
ConsoleApplication1/: BackTracking.cpp  BackTracking.h  BranchAndBound.h  BruteForceSearch.cpp  BruteForceSearch.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  DivideAndConquer.h  DynamicProgramming.h  GreedyAlgorithm.cpp  GreedyAlgorithm.h  PruneAndSearch.cpp  PruneAndSearch.h
DataSructures/: README.md
DataSructures/Array/: README.md
DataSructures/HashMap/: README.md
DataSructures/LinkList/Singly/: README.md
